--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ font-family: Open Sans !important; font-size: 16px !important; } #webcrumbs
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>반갑습니다 개발자입니다.</title>
+    <title>반갑습니다 개발자입.</title>
     <style>
       @import url(https://fonts.googleapis.com/css2?family=Lato&display=swap);
 
